test/libyul/yulSyntaxTests/invalid/swap_disallowed.yul
{
    swap0()
    swap1()
    swap2()
    swap3()
    swap4()
    swap5()
    swap6()
    swap7()
    swap8()
    swap9()
    swap10()
    swap11()
    swap12()
    swap13()
    swap14()
    swap15()
    swap16()
    swap32()
}
// ----
// DeclarationError 4619: (6-11): Function "swap0" not found.
// DeclarationError 4619: (18-23): Function "swap1" not found.
// DeclarationError 4619: (30-35): Function "swap2" not found.
// DeclarationError 4619: (42-47): Function "swap3" not found.
// DeclarationError 4619: (54-59): Function "swap4" not found.
// DeclarationError 4619: (66-71): Function "swap5" not found.
// DeclarationError 4619: (78-83): Function "swap6" not found.
// DeclarationError 4619: (90-95): Function "swap7" not found.
// DeclarationError 4619: (102-107): Function "swap8" not found.
// DeclarationError 4619: (114-119): Function "swap9" not found.
// DeclarationError 4619: (126-132): Function "swap10" not found.
// DeclarationError 4619: (139-145): Function "swap11" not found.
// DeclarationError 4619: (152-158): Function "swap12" not found.
// DeclarationError 4619: (165-171): Function "swap13" not found.
// DeclarationError 4619: (178-184): Function "swap14" not found.
// DeclarationError 4619: (191-197): Function "swap15" not found.
// DeclarationError 4619: (204-210): Function "swap16" not found.
// DeclarationError 4619: (217-223): Function "swap32" not found.
